marketcap/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-marketcap.leenet.link
spec:
  hosts:
  - "marketcap.leenet.link"
  gateways:
  - neon-ingress/leenet-gateway
  http:
  - match:
    - uri:
        prefix: "/" #or prefix
    route:
      - destination:
          host: marketcap.leenet.svc.cluster.local
          port:
            number: 80
